[lworld] C2 intrinsic needs to handle unsafe access to non-flattened field of constant inline type holder

XMLWordPrintable

      # Internal Error (/scratch/mesos/slaves/1a7cca38-e299-473e-97af-f3151e5423d5-S71556/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1d9393a0-085e-49f9-b0a2-ad0b4bdf51e6/runs/b51925ac-3fe7-4726-8857-37d7b1ca1b8a/workspace/open/src/hotspot/share/opto/graphKit.cpp:4593), pid=26375, tid=23811
      # assert(!field->type()->is_inlinetype() || (field->is_static() && !con_type->is_zero_type())) failed: sanity

      Current CompileTask:
      C2: 15377 2057 b 4 compiler.valhalla.inlinetypes.TestIntrinsics::test5_verifier (11 bytes)

      Stack: [0x000070000ccfc000,0x000070000cdfc000], sp=0x000070000cdf6ff0, free space=1003k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x1162bbd] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6ed
      V [libjvm.dylib+0x11632f1] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x41
      V [libjvm.dylib+0x59c372] report_vm_error(char const*, int, char const*, char const*, ...)+0x142
      V [libjvm.dylib+0x7cca23] GraphKit::make_constant_from_field(ciField*, Node*)+0x153
      V [libjvm.dylib+0xc07275] LibraryCallKit::inline_unsafe_access(bool, BasicType, LibraryCallKit::AccessKind, bool)+0x1335
      V [libjvm.dylib+0xbfc6c7] LibraryIntrinsic::generate(JVMState*)+0x177
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x53ac76] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xdc6
      V [libjvm.dylib+0x41e539] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x1c9
      V [libjvm.dylib+0x55b9e9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x709
      V [libjvm.dylib+0x55afec] CompileBroker::compiler_thread_loop()+0x34c
      V [libjvm.dylib+0x10c93e3] JavaThread::thread_main_inner()+0x2a3
      V [libjvm.dylib+0x10c4577] Thread::call_run()+0x1b7
      V [libjvm.dylib+0xe6642f] thread_native_entry(Thread*)+0x15f
      C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
      C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: