8252111: [lworld] C2 intrinsic needs to handle unsafe access to non-flattened field of constant inline type holder